# TimeIsMoney-TimeIsMoneySerial_CMake

./: CMakeLists.txt  main.cpp  serial_db.cpp  serial_db.hpp  serialoptions.cpp  serialoptions.hpp  serialoptions.ui  serialreader_qt.cpp  serialreader_qt.hpp
tests/: test_db.cpp  testmain.cpp
